samples/_failures_safe/1761293765_657c7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4d15a64.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
